# Ed-Fi-Actions

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  NOTICES.md  README.md  approved.json  copilot-setup-steps.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  engineering-issue.yml
.github/workflows/: action.yml  after-pullrequest-bidi.yml  after-pullrequest-powershell.yml  analyze-repository.yml  bidi-excludes.json  bidi-scanner-demo.yml  codeql-analysis.yml  copilot-setup-steps.yml  issue-management.yml  on-pullrequest-approval.yml  on-pullrequest-bidi.yml  on-pullrequest-powershell.yml  on-pullrequest-reposcan.yml  powershell-analyzer.yml  repository-scanner.yml  scan-actions-demo.yml  scorecard.yml
action-allowedlist/: .dockerignore  Dockerfile  README.md  action.yml  approved.json  entrypoint.sh  local.ps1  pyproject.toml  requirements.txt
action-allowedlist/action_allowedlist/: __main__.py  actions_parser.py
action-allowedlist/src/: __main__.py  allowed-action-analyzer.psm1  dependencies.ps1
action-allowedlist/testing-repo/.github/workflows/: test.yml
action-allowedlist/tests/: __init__.py  test_actions_parser.py
action-whitelist/: Dockerfile  README.md  action.yml  approved.json
action-whitelist/src/: action-whitelist.ps1  dependencies.ps1  (+3 more)
bidi-scanner/: .eslintrc.yml  .prettierrc.yaml  action.yml  cli.js  config.js  github.mjs  index.js  package-lock.json  package.json  scanFiles.js
bidirectional_character_scan/: README.md
docs/: README.md  issue-management.md
powershell-analyzer/: Dockerfile  README.md
(+34 files in other folders)
