[tool.poetry]
name = "action-allowedlist"
version = "1.0.1"
description = "Script for ensuring that only pre-vetted GitHub Actions are used in workflows."
authors = ["Ed-Fi Alliance, LLC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
flake8 = "^7.3.0"
black = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
